docs: update storybook

--- a/apps/docs/package.json
+++ b/apps/docs/package.json
@@ -51,14 +51,16 @@
     "react-dom": "18.2.0"
   },
   "devDependencies": {
-    "@storybook/addon-a11y": "7.6.10",
-    "@storybook/addon-essentials": "7.6.10",
-    "@storybook/addon-interactions": "7.6.10",
-    "@storybook/addon-links": "7.6.10",
-    "@storybook/blocks": "7.6.10",
-    "@storybook/react": "7.6.10",
-    "@storybook/react-vite": "7.6.10",
-    "@storybook/test-runner": "0.16.0",
+    "@storybook/addon-a11y": "8.0.8",
+    "@storybook/addon-docs": "8.0.8",
+    "@storybook/addon-essentials": "8.0.8",
+    "@storybook/addon-interactions": "8.0.8",
+    "@storybook/addon-links": "8.0.8",
+    "@storybook/addon-mdx-gfm": "8.0.8",
+    "@storybook/blocks": "8.0.8",
+    "@storybook/react": "8.0.8",
+    "@storybook/react-vite": "8.0.8",
+    "@storybook/test-runner": "0.17.0",
     "@themeless-ui/eslint-config": "workspace:*",
     "@themeless-ui/typescript-config": "workspace:*",
     "@types/react": "18.2.48",
@@ -67,8 +69,9 @@
     "axe-playwright": "2.0.1",
     "concurrently": "8.2.2",
     "eslint": "8.56.0",
+    "remark-gfm": "4.0.0",
     "serve": "14.2.1",
-    "storybook": "7.6.10",
+    "storybook": "8.0.8",
     "typescript": "5.3.3",
     "vite": "5.0.12",
     "wait-on": "7.2.0"
