--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -67,6 +67,7 @@
     "@types/react": "18.2.48",
     "@vitejs/plugin-react": "4.2.1",
     "@vitest/coverage-v8": "1.2.1",
+    "@vitest/expect": "1.2.1",
     "eslint": "8.56.0",
     "jsdom": "23.2.0",
     "react-test-renderer": "18.2.0",
