--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -10,17 +10,15 @@ jobs:
   release-please:
     runs-on: ubuntu-latest
     steps:
-      - uses: google-github-actions/release-please-action@v3
+      - uses: google-github-actions/release-please-action@v4
         id: release
         with:
-          command: manifest
-          release-type: node
-          monorepo-tags: true
-      - uses: actions/checkout@v3
+          token: ${{ secrets.RELEASE_PLEASE_TOKEN }}
+      - uses: actions/checkout@v4
         if: ${{ steps.release.outputs.release_created }}
-      - uses: pnpm/action-setup@v2.2.4
+      - uses: pnpm/action-setup@v3
         if: ${{ steps.release.outputs.release_created }}
-      - uses: actions/setup-node@v3
+      - uses: actions/setup-node@v4
         with:
           node-version-file: ".nvmrc"
           cache: "pnpm"
