chore: update dependencies

--- a/apps/docs/package.json
+++ b/apps/docs/package.json
@@ -41,39 +41,39 @@
     "lint:eslint": "eslint \"**/*.{ts,tsx}\"",
     "lint:eslint:report": "eslint -f json -o ./reports/lint-report-eslint.json \"**/*.{ts,tsx}\"",
     "lint:eslint:fix": "eslint --fix \"**/*.{ts,tsx}\"",
-    "clean": "rm -rf storybook-static reports node_modules .turbo",
+    "clean": "rm -rf storybook-static reports node_modules .turbo tsconfig.tsbuildinfo",
     "publish:npm": "pnpm publish --access public"
   },
   "dependencies": {
     "@themeless-ui/react": "workspace:*",
     "@themeless-ui/style": "workspace:*",
-    "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react": "18.3.1",
+    "react-dom": "18.3.1"
   },
   "devDependencies": {
-    "@storybook/addon-a11y": "8.0.8",
-    "@storybook/addon-docs": "8.0.8",
-    "@storybook/addon-essentials": "8.0.8",
-    "@storybook/addon-interactions": "8.0.8",
-    "@storybook/addon-links": "8.0.8",
-    "@storybook/addon-mdx-gfm": "8.0.8",
-    "@storybook/blocks": "8.0.8",
-    "@storybook/react": "8.0.8",
-    "@storybook/react-vite": "8.0.8",
-    "@storybook/test-runner": "0.17.0",
+    "@storybook/addon-a11y": "8.0.10",
+    "@storybook/addon-docs": "8.0.10",
+    "@storybook/addon-essentials": "8.0.10",
+    "@storybook/addon-interactions": "8.0.10",
+    "@storybook/addon-links": "8.0.10",
+    "@storybook/addon-mdx-gfm": "8.0.10",
+    "@storybook/blocks": "8.0.10",
+    "@storybook/react": "8.0.10",
+    "@storybook/react-vite": "8.0.10",
+    "@storybook/test-runner": "0.18.0",
     "@themeless-ui/eslint-config": "workspace:*",
     "@themeless-ui/typescript-config": "workspace:*",
-    "@types/react": "18.2.79",
-    "@types/react-dom": "18.2.25",
-    "axe-core": "4.9.0",
+    "@types/react": "18.3.1",
+    "@types/react-dom": "18.3.0",
+    "axe-core": "4.9.1",
     "axe-playwright": "2.0.1",
     "concurrently": "8.2.2",
     "eslint": "8.57.0",
     "remark-gfm": "4.0.0",
-    "serve": "14.2.1",
-    "storybook": "8.0.8",
+    "serve": "14.2.3",
+    "storybook": "8.0.10",
     "typescript": "5.4.5",
-    "vite": "5.2.9",
+    "vite": "5.2.11",
     "wait-on": "7.2.0"
   }
 }
