--- a/apps/react-example/package.json
+++ b/apps/react-example/package.json
@@ -40,37 +40,37 @@
     "lint:stylelint": "stylelint \"**/*.css\"",
     "lint:stylelint:report": "stylelint -f json -o ./reports/lint-report-stylelint.json \"**/*.css\"",
     "lint:stylelint:fix": "stylelint \"**/*.css\" --fix",
-    "clean": "rm -rf dist reports node_modules .turbo",
+    "clean": "rm -rf dist reports node_modules .turbo tsconfig.tsbuildinfo",
     "publish:npm": "pnpm publish --access public"
   },
   "dependencies": {
-    "@fontsource/fira-mono": "5.0.12",
-    "@fontsource/karma": "5.0.12",
-    "@fontsource/open-sans": "5.0.27",
+    "@fontsource/fira-mono": "5.0.13",
+    "@fontsource/karma": "5.0.13",
+    "@fontsource/open-sans": "5.0.28",
     "@themeless-ui/react": "workspace:*",
     "@themeless-ui/style": "workspace:*",
-    "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react": "18.3.1",
+    "react-dom": "18.3.1"
   },
   "devDependencies": {
-    "@testing-library/jest-dom": "6.4.2",
-    "@testing-library/react": "15.0.2",
+    "@testing-library/jest-dom": "6.4.5",
+    "@testing-library/react": "15.0.7",
     "@testing-library/user-event": "14.5.2",
     "@themeless-ui/eslint-config": "workspace:*",
     "@themeless-ui/stylelint-config": "workspace:*",
     "@themeless-ui/typescript-config": "workspace:*",
-    "@types/react": "18.2.79",
-    "@types/react-dom": "18.2.25",
-    "@types/react-test-renderer": "18.0.7",
+    "@types/react": "18.3.1",
+    "@types/react-dom": "18.3.0",
+    "@types/react-test-renderer": "18.3.0",
     "@vitejs/plugin-react": "4.2.1",
-    "@vitest/coverage-v8": "1.5.0",
-    "@vitest/expect": "1.5.0",
+    "@vitest/coverage-v8": "1.6.0",
+    "@vitest/expect": "1.6.0",
     "eslint": "8.57.0",
     "jsdom": "24.0.0",
-    "react-test-renderer": "18.2.0",
-    "stylelint": "16.3.1",
+    "react-test-renderer": "18.3.1",
+    "stylelint": "16.5.0",
     "typescript": "5.4.5",
-    "vite": "5.2.9",
-    "vitest": "1.5.0"
+    "vite": "5.2.11",
+    "vitest": "1.6.0"
   }
 }
