--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -46,7 +46,7 @@
     "lint:eslint": "eslint \"**/*.{ts,tsx}\"",
     "lint:eslint:report": "eslint -f json -o ./reports/lint-report-eslint.json \"**/*.{ts,tsx}\"",
     "lint:eslint:fix": "eslint --fix \"**/*.{ts,tsx}\"",
-    "clean": "rm -rf dist reports node_modules .turbo",
+    "clean": "rm -rf dist reports node_modules .turbo tsconfig.tsbuildinfo",
     "publish:npm": "pnpm publish --access public"
   },
   "peerDependencies": {
@@ -57,23 +57,23 @@
     "@themeless-ui/utils": "workspace:*"
   },
   "devDependencies": {
-    "@testing-library/jest-dom": "6.4.2",
-    "@testing-library/react": "15.0.2",
+    "@testing-library/jest-dom": "6.4.5",
+    "@testing-library/react": "15.0.7",
     "@testing-library/user-event": "14.5.2",
     "@themeless-ui/eslint-config": "workspace:*",
     "@themeless-ui/typescript-config": "workspace:*",
-    "@types/react-dom": "18.2.25",
-    "@types/react-test-renderer": "18.0.7",
-    "@types/react": "18.2.79",
+    "@types/react-dom": "18.3.0",
+    "@types/react-test-renderer": "18.3.0",
+    "@types/react": "18.3.1",
     "@vitejs/plugin-react": "4.2.1",
-    "@vitest/coverage-v8": "1.5.0",
-    "@vitest/expect": "1.5.0",
+    "@vitest/coverage-v8": "1.6.0",
+    "@vitest/expect": "1.6.0",
     "eslint": "8.57.0",
     "jsdom": "24.0.0",
-    "react-test-renderer": "18.2.0",
+    "react-test-renderer": "18.3.1",
     "typescript": "5.4.5",
-    "vite-plugin-dts": "3.8.3",
-    "vite": "5.2.9",
-    "vitest": "1.5.0"
+    "vite-plugin-dts": "3.9.1",
+    "vite": "5.2.11",
+    "vitest": "1.6.0"
   }
 }
