--- a/packages/theme-default/package.json
+++ b/packages/theme-default/package.json
@@ -29,14 +29,14 @@
     "lint:stylelint": "stylelint \"**/*.css\"",
     "lint:stylelint:report": "stylelint -f json -o ./reports/lint-report-stylelint.json \"**/*.css\"",
     "lint:stylelint:fix": "stylelint \"**/*.css\" --fix",
-    "clean": "rm -rf dist reports node_modules .turbo",
+    "clean": "rm -rf dist reports node_modules .turbo tsconfig.tsbuildinfo",
     "publish:npm": "pnpm publish --access public"
   },
   "devDependencies": {
     "@themeless-ui/stylelint-config": "workspace:*",
     "@themeless-ui/typescript-config": "workspace:*",
-    "stylelint": "16.3.1",
+    "stylelint": "16.5.0",
     "typescript": "5.4.5",
-    "vite": "5.2.9"
+    "vite": "5.2.11"
   }
 }
