--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -45,18 +45,18 @@
     "lint:eslint": "eslint \"**/*.{ts,tsx}\"",
     "lint:eslint:report": "eslint -f json -o ./reports/lint-report-eslint.json \"**/*.{ts,tsx}\"",
     "lint:eslint:fix": "eslint --fix \"**/*.{ts,tsx}\"",
-    "clean": "rm -rf dist reports node_modules .turbo",
+    "clean": "rm -rf dist reports node_modules .turbo tsconfig.tsbuildinfo",
     "publish:npm": "pnpm publish --access public"
   },
   "devDependencies": {
     "@themeless-ui/eslint-config": "workspace:*",
     "@themeless-ui/typescript-config": "workspace:*",
-    "@vitest/coverage-v8": "1.5.0",
-    "@vitest/expect": "1.5.0",
+    "@vitest/coverage-v8": "1.6.0",
+    "@vitest/expect": "1.6.0",
     "eslint": "8.57.0",
     "typescript": "5.4.5",
-    "vite-plugin-dts": "3.8.3",
-    "vite": "5.2.9",
-    "vitest": "1.5.0"
+    "vite-plugin-dts": "3.9.1",
+    "vite": "5.2.11",
+    "vitest": "1.6.0"
   }
 }
